# HIPRT-Path-Tracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SceneCredits.txt
README_data/Features/: features.md
README_data/img/: LayeredBSDF.drawio  scene credits.txt
cmake/: Clip.cmake  SetupASSIMP.cmake  SetupHIPRT.cmake  SetupOIDN.cmake  SetupOrochi.cmake  SetupTracy.cmake
data/BRDFsData/: GGX_Ess_96x96.hdr
data/BRDFsData/GGX/: GGX_Conductor_128x128.hdr  GGX_Conductor_Correlated_128x128.hdr  GGX_Conductor_Uncorrelated_128x128.hdr  GGX_Ess_1024x1024.hdr  GGX_Ess_32x32.hdr
data/BRDFsData/GlossyDielectrics/: 0Glossy_Ess_128x64x128.hdr  0Glossy_Ess_Correlated_128x64x128.hdr  100Glossy_Ess_128x64x128.hdr  100Glossy_Ess_Correlated_128x64x128.hdr  100Glossy_Ess_Uncorrelated_128x64x128.hdr  101Glossy_Ess_128x64x128.hdr  101Glossy_Ess_Correlated_128x64x128.hdr  101Glossy_Ess_Uncorrelated_128x64x128.hdr  102Glossy_Ess_128x64x128.hdr  (+374 more)
data/GLTFs/: DELETEC.gltf  DELETEC.mtl  cornell_pbr.gltf  multi-dispersion.gltf  nested-dielectrics-complex.gltf  nested-dielectrics.gltf  the-white-room-low.gltf
include/: bvh.h  camera.h  color.h  flattened_bvh.h  parsed_scene.h  render_kernel.h  renderer_material.h  simple_material.h  triangle.h  utils.h  vec.h
source/: bvh.cpp  bvh_tests.h  camera.cpp  color.h  hit_info.h  image_io.cpp  main.cpp  mat.cpp  mat.h  render_kernel.cpp  renderer.cpp  tests.cpp  tests.h  utils.cpp  utils.h  vec.cpp
source/UI/: app_window.cpp
src/: bvh_constants.h  color.cpp  flattened_bvh.cpp  image.h  image_io.h  llvm-compile-kernel.h  main.cpp  ray.h  renderer.h  renderer_material.h  sphere.h  triangle.cpp  utils.cpp  xorshift.h
src/Compiler/: GPUKernel.cpp  GPUKernel.h  GPUKernelCompiler.cpp  GPUKernelCompiler.h  GPUKernelCompilerOptions.cpp  GPUKernelCompilerOptions.h  HIPKernel.cpp  HIPKernel.h  HIPKernelCompiler.cpp  HIPKernelCompiler.h
src/Experimentations/: TestCopyKernelAlignment.cpp  TestCopyKernelAlignment.h  TestCopyKernelRestrict.cpp  TestCopyKernelRestrict.h  TestCopyKernelSimple.cpp  TestCopyKernelSimple.h
src/HIPRT-Orochi/: HIPKernel.cpp  HIPKernel.h  HIPKernelCompiler.cpp  HIPKernelCompiler.h  HIPRTOrochiCtx.h  HIPRTOrochiUtils.cpp  HIPRTOrochiUtils.h  HIPRTScene.h  OrochiBuffer.h  OrochiEnvmap.cpp  OrochiEnvmap.h  OrochiTexture.cpp  OrochiTexture.h  OrochiTexture3D.cpp  OrochiTexture3D.h  OrochiTextureCUDA.cpp  hiprt_orochi_ctx.h  hiprt_scene.h  hiprtpt_orochi_utils.cpp  orochi_buffer.h  orochi_utils.cpp  orochi_utils.h
src/HostDeviceCommon/: AlignMacro.h  AtomicType.h  BSDFsData.h  Camera.h  Color.h  ColorRGB.h  GBufferDevice.h  HIPRTCamera.h  HitInfo.h  KernelOptions.h  LightSampleInformation.h  Material.h  Math.h  MicrofacetRegularizationSettings.h  Packing.h  PathRussianRoulette.h  PrecomputedEmissiveTrianglesDataSoADevice.h  ReSTIRDISettings.h  ReSTIRSettingsHelper.h  RenderBuffers.h  RenderData.h  RenderSettings.cpp  RenderSettings.h  WorldSettings.h  Xorshift.h  camera.h  color.h  color_rgb.h  hit_info.h  material.h  math.h  render_data.h  xorshift.h
src/Image/: Envmap.cpp  Envmap.h  EnvmapRGBE9995.h  Image.cpp  Image.h  color.h  envmap.cpp  envmap.h  image.cpp  image.h  image_io.cpp  image_io.h  image_to_delete.h  image_writer.cpp  image_writer.h
src/Kernels/: HIPRTCommon.h  HIPRTMaths.h  NormalsKernel.h  normals_kernel.h  path_tracer_kernel.h
src/Maths/: mat.cpp  mat.h  vec.cpp  vec.h
src/OpenGL/: OpenGLInteropBuffer.h  OpenGLProgram.cpp  OpenGLProgram.h  OpenGLShader.cpp  OpenGLShader.h
src/OpenGLInterop/: OpenGLInteropBuffer.cpp  OpenGLInteropBuffer.h
src/Renderer/: BVH.cpp  BVH.h  BVHConstants.h  BoundingVolume.h  CPURenderer.cpp  CPURenderer.h  CPURendererGBuffer.h  DenoiserBuffers.cpp  DenoiserBuffers.h  FilterFunction.h  GBufferCPURenderer.h  GBufferGPURenderer.h  GPUCompilerOptions.cpp  GPUCompilerOptions.h  GPUKernelOptions.cpp  GPUKernelOptions.h  GPURenderer.cpp  GPURenderer.h  GPURendererGBuffer.h  GPURendererThread.cpp  GPURendererThread.h  HardwareAccelerationSupport.h  OpenImageDenoiser.cpp  OpenImageDenoiser.h  RenderKernel.cpp  RenderKernel.h  RendererAnimationState.h  RendererEnvmap.cpp  RendererEnvmap.h  RendererGBuffer.h  Sphere.h  StatusBuffersValues.h  Triangle.cpp  Triangle.h  bounding_volume.h  bvh.cpp  bvh.h  bvh_constants.h  denoiser_debug_view.h  display_view_enum.h  (+15 more)
src/Scene/: BoundingBox.h  Camera.cpp  Camera.h  CameraAnimation.cpp  CameraAnimation.h  CameraRotationType.h  ParsedEmissiveMeshes.cpp  ParsedEmissiveMeshes.h  SceneParser.cpp  SceneParser.h  camera.cpp  camera.h  scene_parser.cpp  scene_parser.h
src/Shaders/: albedo_display.frag  blend_2_display.frag  boolmap_int.frag  default_display.frag  display.frag  fullscreen_quad.vert  heatmap_int.frag  normal_display.frag  white_furnace_threshold.frag
src/Tests/: bvh_tests.h  tests.cpp
src/Threads/: ThreadFunctions.cpp  ThreadFunctions.h  ThreadManager.cpp  ThreadManager.h  ThreadState.h
src/UI/: ApplicationSettings.cpp  ApplicationSettings.h  ApplicationState.h  DisplayTextureType.h  DisplayView.cpp  DisplayView.h  DisplayViewEnum.h  DisplayViewSystem.cpp  DisplayViewSystem.h  ImGuiRenderer.cpp  ImGuiRenderer.h  ImGuiRendererPerformancePreset.h  KernelOptionsEnums.h  LinuxRenderWindowMouseInteractor.cpp  LinuxRenderWindowMouseInteractor.h  PerformanceMetricsComputer.cpp  PerformanceMetricsComputer.h  RenderWindow.cpp  RenderWindow.h  RenderWindowKeyboardInteractor.cpp  RenderWindowKeyboardInteractor.h  RenderWindowMouseInteractor.cpp  RenderWindowMouseInteractor.h  Screenshoter.cpp  Screenshoter.h  WindowsRenderWindowMouseInteractor.cpp  WindowsRenderWindowMouseInteractor.h  app_window.cpp  app_window.h  application_settings.h  display_settings.h  render_window.cpp  render_window.h
src/Utils/: CommandlineArguments.cpp  CommandlineArguments.h  Utils.cpp  Utils.h  commandline_arguments.h  opengl_utils.cpp  opengl_utils.h  orochi_utils.cpp  orochi_utils.h  utils.cpp  utils.h
thirdparties/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_widgets.cpp
thirdparties/stbi/: stb_image.h
thirdparties/tinyexr/: tinyexr.h
(+1459 files in other folders)
